Fix input-section overflow issue

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 	line-height: 1;
     font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
 }
 ol, ul {
 	list-style: none;
@@ -50,6 +50,15 @@ table {
 	border-spacing: 0;
 }
 
+input, label, button {
+    font-family: inherit;
+    font-size: 100%;
+    padding: 0; 
+    margin: 0;
+    display: block;
+    -webkit-appearance: none;
+}
+
 .image-container {
     background-image: url("cat.jpg");
     background-repeat: no-repeat;
@@ -58,6 +67,7 @@ table {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-height: 100vh;
 
     .credit {
         color: white;
@@ -82,7 +92,7 @@ table {
     height: 20%;
 
     .logo {
-        width: 18%;
+        width: 15%;
     }
 
     h1 {
@@ -100,12 +110,13 @@ h2 {
 .form-container {
     background-color: rgba(233, 233, 233, 0.3);
     width: 60%;
+    min-height: 100vh;
 }
 
 .form-intro {
-    width: 70%;
     line-height: 1.5rem;
-    padding: 5rem 5rem 2rem 2rem;
+    padding: 5% 5em 2em 2em;
+    font-weight: 500;
     h2 {
         margin-top: 1rem;
     }
@@ -113,22 +124,98 @@ h2 {
 
 .input-section {
     background-color: white;;
-    padding: 1rem 0 1rem 2rem;
-}
-
-input, label, button {
-    font-family: inherit;
-    font-size: 100%;
-    padding: 0; 
-    margin: 0;
-    display: block;
+    padding: 1em 0 2em 2em;
+    font-weight: 500;
+    box-shadow: 8px 4px 5px 0 #e0dfdf;
+    label {
+        font-size: 0.8rem;
+        margin-bottom: 0.2rem;
+    }
 }
 
 .form-row {
     display: flex;
-    margin-top: 1rem;
-    
+    margin-top: 1.8rem;
+    flex-wrap: wrap;
+    width: 90%;
 }
 
+.form-row > .input-container {
+    flex: 1;
+    margin-right: 1em;
+}
 
+input {
+        width: 80%;
+        height: 60%;
+        border: 1px solid rgba(210, 210, 210, 1);
+        border-radius: 5px;
+        padding: 0.1em 0 0.1em 0.3em;
+    }
+
+input:focus {
+    outline: none;
+    border: 1px solid rgb(78, 114, 255);
+    box-shadow: 3px 3px 7px -1px gray;
+}
+
+input:user-invalid {
+    border: 1px solid rgba(255, 74, 74, 1)
+}
+
+input:user-valid {
+    border: 1px solid rgb(91, 204, 89)
+}
+
+button {
+    border: 1px solid rgb(170, 160, 114);
+    padding: 1em 3em;
+    background-color: rgb(170, 160, 114);
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    margin-bottom: 2em;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color:rgb(255, 255, 255);
+    border: 1px solid rgb(170, 160, 114);
+    color: rgb(170, 160, 114);
+}
+
+.button-container {
+    margin: 2em 0 2em 2em;
+
+    a:link, a:visited{
+        color: rgb(170, 160, 114);
+        text-decoration: none;
+        font-weight: 500;
+    }
+}
+
+input[type="email"] + span {
+    position: relative;
+}
+
+input[type="email"] + span::after {
+    font-size: 0.7rem;
+    position: absolute;
+    padding: 5px 10px;
+    top: -26px;
+  }
+
+input[type="email"]:user-invalid + span::after {
+  color: red;
+  width: 15em;
+  content: "Please provide a valid Email";
+  left: -9px;
+  top: -2px;
+}
+
+.pwd-message {
+    display: inline-block;
+    margin-top: 0.5em;
+    font-size: 0.8rem;
+    color: rgba(255, 74, 74, 1);
+}
 
